--- a/project_dev/src/main/webapp/WEB-INF/web.xml
+++ b/project_dev/src/main/webapp/WEB-INF/web.xml
@@ -31,11 +31,14 @@
 	</servlet-mapping>
 
 	<!-- 공통 common.jspf 추가 -->
+ 
 	<jsp-config>
 		<jsp-property-group>
 			<url-pattern>*.jsp</url-pattern>
-			<include-prelude>/common/common.jspf</include-prelude>
+			<include-prelude>/common/header.jspf</include-prelude>
+			<include-coda>/common/footer.jspf</include-coda>
 		</jsp-property-group>
 	</jsp-config>
-
+ 
+ 
 </web-app>
